--- a/styles/auth.module.scss
+++ b/styles/auth.module.scss
@@ -43,6 +43,7 @@
             align-items: center;
             border: 1px solid $red-100;
             border-radius: 1rem;
+            cursor: pointer;
         }
     }
 }
